Connected Express server to MongoDB

--- a/package.json
+++ b/package.json
@@ -5,6 +5,23 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
-  }
+    "dotenv": "^17.2.3",
+    "express": "^4.21.2",
+    "mongoose": "^8.19.2"
+  },
+  "version": "1.0.0",
+  "description": "Imagine you're building the backend for a simple **event management application**. Your task is to independently set up an **Express.js** server and connect it to a **MongoDB** database using **Mongoose**.",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MohammadAsheel/DB-connecting-to-express-server-2.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/MohammadAsheel/DB-connecting-to-express-server-2/issues"
+  },
+  "homepage": "https://github.com/MohammadAsheel/DB-connecting-to-express-server-2#readme"
 }
